// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast renders a success notification 1`] = `
<div>
  <div
    class="toast"
  >
    <div
      class="toast-content"
    >
      <div
        class="toast-icon-content"
      >
        <svg
          aria-hidden="true"
          class="h-6 w-6 text-green-400"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 12.75 11.25 15 15 9.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
      <div
        class="toast-content-content"
      >
        <p
          class="toast-title"
        >
          Success
        </p>
        <p
          class="toast-description"
        >
          Success information
        </p>
      </div>
      <div
        class="toast-close-content"
      >
        <button
          class="toast-close-btn"
          role="close-toast"
          type="button"
        >
          <span
            class="sr-only"
          >
            Close
          </span>
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            data-slot="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.28 5.22a.75.75 0 0 0-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 1 0 1.06 1.06L10 11.06l3.72 3.72a.75.75 0 1 0 1.06-1.06L11.06 10l3.72-3.72a.75.75 0 0 0-1.06-1.06L10 8.94 6.28 5.22Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Toast renders an error notification 1`] = `
<div>
  <div
    class="toast"
  >
    <div
      class="toast-content"
    >
      <div
        class="toast-icon-content"
      >
        <svg
          aria-hidden="true"
          class="h-6 w-6 text-red-400"
          data-slot="icon"
          fill="none"
          stroke="currentColor"
          stroke-width="1.5"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 18 18 6M6 6l12 12"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </div>
      <div
        class="toast-content-content"
      >
        <p
          class="toast-title"
        >
          Error
        </p>
        <p
          class="toast-description"
        >
          Error information
        </p>
      </div>
      <div
        class="toast-close-content"
      >
        <button
          class="toast-close-btn"
          role="close-toast"
          type="button"
        >
          <span
            class="sr-only"
          >
            Close
          </span>
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            data-slot="icon"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.28 5.22a.75.75 0 0 0-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 1 0 1.06 1.06L10 11.06l3.72 3.72a.75.75 0 1 0 1.06-1.06L11.06 10l3.72-3.72a.75.75 0 0 0-1.06-1.06L10 8.94 6.28 5.22Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
